# shuncommands

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  main.yml  test.yml
src/: rmtmp.py
tests/: test_pdftool.py  test_rmtmp.py
