[tool.poetry]
name = "shuncommands"
version = "1.0.6.post6.dev0+c7fed70"
description = "mypaceshun usefull commands"
authors = ["KAWAI Shun <mypaceshun@gmail.com>"]
maintainers = ["KAWAI Shun <mypaceshun@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mypaceshun/shuncommands"
repository = "https://github.com/mypaceshun/shuncommands"
keywords = ["python", "click"]
packages = [
  {include = 'shuncommands/'}
]
include = ["CHANGELOG.md"]

[tool.poetry-dynamic-versioning]
enable = false
vcs = 'git'
style = 'pep440'

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pikepdf = "^7.2.0"
gitignore-parser = "^0.1.3"
click = "^8.1.3"
pdfminer-six = "^20221105"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
poethepoet = "^0.11.0"
autoflake = "^1.4"
isort = "^5.10.1"
git-changelog = "^0.5.0"
pytest = "^6.2.5"
black = "^21.12b0"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
rmtmp = "shuncommands.rmtmp:ctx"
pdftool = "shuncommands.pdftool:ctx"

[tool.poe.tasks.changelog]
cmd = "git-changelog -o CHANGELOG.md .git"

[tool.poe.tasks.lint]
cmd = "pflake8 shuncommands/ tests/"

[tool.poe.tasks.format]
sequence = [
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports shuncommands/ tests/" },
  { cmd = "isort --profile black shuncommands/ tests/" },
  { cmd = "black shuncommands/ tests/" }
]
[tool.poe.tasks.test]
cmd = "pytest --cov shuncommands/ --cov-report=html tests/"

[tool.poe.tasks.citest]
cmd = "pytest --cov shuncommands/ --cov-report=xml tests/"

[tool.flake8]
max-line-length = 88
ignore = "E203,W503,W504"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
